--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <link rel="icon" href="logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>WindPet</title>
+    <title>Windpet</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
